# foundation-medicine-xml-parser

./: .gitignore  LICENSE  README.md  pyproject.toml  run_fmi_daily.sh
foundation_medicine_parser/: parser.py  process_fmi.py
scripts/: fmi_parse.py  fmi_report_data.py
uccc/: parser.py
